--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,17 @@
+on:
+  push:
+    branches:
+      - new
+
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 'Testing Github action' 
+        run: pwd
+
+      - name: 'Testing Printing'
+        run: echo amera
 
